# QtDesktop

./: CMakeLists.txt  Log.txt  QDesktop.pro  README.md  main.cpp  main.qml  qml.qrc  工程组织.txt  想法.md  想法.txt
A正点原子例程/desktop/: desktop.h
A正点原子例程/fileview/: FileView.qml
core/drivers/: beep.cpp  beep.h
core/services/: AlarmService.cpp  AlarmService.h  ServiceManager.cpp  ServiceManager.h
core/system/: AlarmManager.cpp  AlarmManager.h  AutoStart.cpp  AutoStart.h  SystemMonitor.cpp  SystemMonitor.h  SystemTray.cpp  SystemTray.h
desktop/: WinStyleDesktop.qml  desktop.cpp
modules/AlarmClock/: AlarmClock.qml  AlarmClockCtrl.cpp  AlarmClockCtrl.h  AlarmCtrl.cpp  AlarmCtrl.h  AlarmDialog.qml  AlarmItemDelegate.qml  AlarmListPage.qml  AlarmPage.qml  ClockPage.qml  DayToggle.qml  DayToggleButton.qml  FloatingActionButton.qml  IconButton.qml  TimeAdjuster.qml  TimeEdit.qml  TimePage.qml  TimePicker.qml  TimeWheel.qml
modules/Calculator/: CalcButton.qml  Calculator.qml  CalculatorCtrl.cpp  CalculatorCtrl.h
modules/FileExplorer/: FileExplorer.qml  FileExplorerCtrl.cpp  FileExplorerCtrl.h
shared/components/: SystemTray.qml
shared/styles/: Theme.qml
ui/: Desktop.qml
ui/components/: AppIcon.qml  AppPage.qml  ClockWidget.qml  GalleryWidget.qml  IconButton.qml  PageIndicator.qml  SystemTrayItem.qml  TaskSwitcher.qml  TopBar.qml
weather/: weatherdata.h
